shadow dom für vorschau

--- a/views/klasse.slim
+++ b/views/klasse.slim
@@ -48,5 +48,4 @@
       #vorschau.tab-pane role="tabpanel"
         .row
           .col-xs-12
-            dom-module id="vorschau-dom"
-              paper-progress disabled="true" indeterminate="true" style="width:100%;"
+            #vorschau-dom
