--- a/views/schueler.slim
+++ b/views/schueler.slim
@@ -73,8 +73,7 @@
         #vorschau.tab-pane role="tabpanel"
           .row
             .col-xs-12
-              dom-module id="vorschau-dom"
-                paper-progress disabled="true" indeterminate="true" style="width:100%;"
+              #vorschau-dom
         #debug.tab-pane role="tabpanel"
           .row
             .col-xs-4
