progress bar entfernt

--- a/views/layout.slim
+++ b/views/layout.slim
@@ -9,7 +9,7 @@ html lang="en"
     link href="/css/app.css" rel="stylesheet"
     link href="/favicon.ico" rel="shortcut icon"
     script src="/assets/js/js-libs.js"
-    link rel="import" href="/bower_components/paper-progress/paper-progress.html"
+    / link rel="import" href="/bower_components/paper-progress/paper-progress.html"
     link rel="import" href="/bower_components/juicy-html/juicy-html.html"
     script src="/bower_components/webcomponentsjs/webcomponents.js"
     script src="/assets/js/sahib.js"
