helpers aus dokumenten einbinden + vorschau link

--- a/views/klasse.slim
+++ b/views/klasse.slim
@@ -48,6 +48,7 @@
       #vorschau.tab-pane role="tabpanel"
         .row
           .col-xs-12
+            a#direktlink-vorschau href=""
             #vorschau-dom
 javascript:
   var vorschauDom = document.querySelector('#vorschau-dom')
