--- a/views/schueler.slim
+++ b/views/schueler.slim
@@ -73,6 +73,7 @@
         #vorschau.tab-pane role="tabpanel"
           .row
             .col-xs-12
+              a#direktlink-vorschau href=""
               #vorschau-dom
         #debug.tab-pane role="tabpanel"
           .row
