--- a/views/schueler.slim
+++ b/views/schueler.slim
@@ -75,6 +75,7 @@
             .col-xs-12
               a#direktlink-vorschau href=""
               #vorschau-dom
+                template id="doc-frame" is="juicy-html" content="/cache" on-stamped="stamped"
         #debug.tab-pane role="tabpanel"
           .row
             .col-xs-4
